--- a/src/scss/components/base/btn.scss
+++ b/src/scss/components/base/btn.scss
@@ -13,6 +13,15 @@
   align-items: center;
   font-size: 20px;
   transition: .4s;
+  text-align: center;
+
+  @media (max-width: 450px) {
+    padding-left: 15px;
+    padding-right: 15px;
+  }
+  @media (max-width: 400px) {
+    font-size: 17px;
+  }
   &.--blue-full{
     background-color: $primary-500;
     border: 3px solid $primary-600;
