--- a/src/scss/pages/main.scss
+++ b/src/scss/pages/main.scss
@@ -243,6 +243,12 @@
     font-family: 'TT Firs Neue';
   }
 
+  @media (max-width: 1080px) {
+    &__title {
+      font-size: 58px;
+    }
+  }
+
   @media (max-width: 992px) {
     &__item {
 
@@ -541,6 +547,10 @@
     &.--gray{
       color: #A6AFC0;
     }
+  }
+
+  @media (max-width: 1080px) {
+    background-position: center 90px;
   }
 
   @media (max-width: 992px) {
@@ -1980,8 +1990,9 @@
 }
 .plans-card {
   &__item {
-    flex: 0 0 160px;
-    margin-right: 30px;
+    display: block;
+    width: 160px;
+    margin: 0 auto 5px;
   }
   &__title {
     display: flex;
