--- a/src/views/_includes/scripts.pug
+++ b/src/views/_includes/scripts.pug
@@ -1,2 +1,4 @@
-script(src='assets/js/vendors~main.bundle.js')
-script(src='assets/js/main.bundle.js?v=' + PACKAGE.version)
+//- script(src='assets/js/vendors~main.bundle.js')
+//- script(src='assets/js/main.bundle.js?v=' + PACKAGE.version)
+script(src="assets/js/libs.js")
+script(src="assets/js/main.js")
