--- a/src/views/index.pug
+++ b/src/views/index.pug
@@ -149,31 +149,32 @@ block content
                   +svgsprite('btn-arrow')
         
       .about__panel.--blocks
-        .row
-          .col-md-4.col-sm-5.sm-order-1
-            .h3 Блоки и шаблоны для уроков 
-          .col-md-8.col-sm-7.sm-order-1
-            .about__text Создавай уроки и курсы с помощью готовых блоков и шаблонов методом переноса. Конструируй и тестируй уроки бесплатно.
-          .col-sm-4
-            .about__pics-block
-              .about__pic-block.about__pic-block-1
-                img(src="./assets/img/about/2.svg", alt="")
-              .about__pic-block.about__pic-block-2
-                img(src="./assets/img/about/3.svg", alt="")
-                .about__pic-animate 
-                  img(src="./assets/img/about/4.svg", alt="")
-                .about__mouse
-                  img(src="./assets/img/about/mouse.svg", alt="")
-              .about__pic-block.about__pic-block-3
-                img(src="./assets/img/about/5.svg", alt="")
-          .col-sm-8
-            .about__info 
-              .about__animate   
-                .about__animate-head
-                  .about__animate-number 1
-                  .about__animate-text Страница урока
-                .about__animate-pic
-                  img(src="./assets/img/about/pic.jpg", alt="")
+        .about__panel-trigger
+          .row
+            .col-md-4.col-sm-5.sm-order-1
+              .h3 Блоки и шаблоны для уроков 
+            .col-md-8.col-sm-7.sm-order-1
+              .about__text Создавай уроки и курсы с помощью готовых блоков и шаблонов методом переноса. Конструируй и тестируй уроки бесплатно.
+            .col-sm-4
+              .about__pics-block
+                .about__pic-block.about__pic-block-1
+                  img(src="./assets/img/about/2.svg", alt="")
+                .about__pic-block.about__pic-block-2
+                  img(src="./assets/img/about/3.svg", alt="")
+                  .about__pic-animate 
+                    img(src="./assets/img/about/4.svg", alt="")
+                    .about__mouse
+                      img(src="./assets/img/about/mouse.svg", alt="")
+                .about__pic-block.about__pic-block-3
+                  img(src="./assets/img/about/5.svg", alt="")
+            .col-sm-8
+              .about__info 
+                .about__animate   
+                  .about__animate-head
+                    .about__animate-number 1
+                    .about__animate-text Страница урока
+                  .about__animate-pic
+                    img(src="./assets/img/about/pic.jpg", alt="")
         
       .about__panel.--online
         .row.--aicn
@@ -186,7 +187,7 @@ block content
               img(src="./assets/img/about/6.svg", alt="", loading="lazy")
         
         
-      .about__panel.--work
+      .about__panel.--work.gifs-in
         .row 
           .col-sm-4 
             .about__pic 
@@ -238,46 +239,47 @@ block content
       .add__title
         h2 Создание курса <br>без вложений
         .add__title-descr Бесплатно создавай, тестируй и доводи свой курс до идеала. Плати только за запуск.
-    .add__list
+    .add__list#add__list
       .container
-        .add__scroll
-          .add__item
-            .add__item-label Бесплатно
-            .add__number 01
-            .add__pic 
-              img(src="./assets/img/add/1.svg", alt="")
-            .add__text <b>Зарегистрируйся</b> <br>и познакомься <br>с платформой
-          .add__item 
-            .add__number 02
-            .add__pic 
-              img(src="./assets/img/add/2.svg", alt="")
-            .add__text Создай <b>бесконечное</b><br> кол-во уроков
-          .add__item 
-            .add__number 03
-            .add__pic 
-              img(src="./assets/img/add/3.svg", alt="")
-            .add__text <b>Тестируй</b> <br>и <b>корректируй</b> уроки
-          .add__item 
-            .add__number 04
-            .add__pic 
-              img(src="./assets/img/add/4.svg", alt="")
-            .add__text Собери курс <br>и <b>подготовь</b> <br><b>его к продаже</b>
-          .add__item 
-            .add__item-label.--green Платно
-            .add__number.--green 05
-            .add__pic 
-              img(src="./assets/img/add/5.svg", alt="")
-            .add__text <b>Запусти курс</b>
-          .add__item 
-            .add__number.--green 06
-            .add__pic 
-              img(src="./assets/img/add/6.svg", alt="")
-            .add__text Добавляй учеников к курсу
-          .add__item 
-            .add__number.--green 07
-            .add__pic 
-              img(src="./assets/img/add/7.svg", alt="")
-            .add__text Обучай и анализируй прогресс
+        .add__scroll-wrap#add__scroll-wrap
+          .add__scroll#add__scroll
+            .add__item
+              .add__item-label Бесплатно
+              .add__number 01
+              .add__pic 
+                img(src="./assets/img/add/1.svg", alt="")
+              .add__text <b>Зарегистрируйся</b> <br>и познакомься <br>с платформой
+            .add__item 
+              .add__number 02
+              .add__pic 
+                img(src="./assets/img/add/2.svg", alt="")
+              .add__text Создай <b>бесконечное</b><br> кол-во уроков
+            .add__item 
+              .add__number 03
+              .add__pic 
+                img(src="./assets/img/add/3.svg", alt="")
+              .add__text <b>Тестируй</b> <br>и <b>корректируй</b> уроки
+            .add__item 
+              .add__number 04
+              .add__pic 
+                img(src="./assets/img/add/4.svg", alt="")
+              .add__text Собери курс <br>и <b>подготовь</b> <br><b>его к продаже</b>
+            .add__item 
+              .add__item-label.--green Платно
+              .add__number.--green 05
+              .add__pic 
+                img(src="./assets/img/add/5.svg", alt="")
+              .add__text <b>Запусти курс</b>
+            .add__item 
+              .add__number.--green 06
+              .add__pic 
+                img(src="./assets/img/add/6.svg", alt="")
+              .add__text Добавляй учеников к курсу
+            .add__item 
+              .add__number.--green 07
+              .add__pic 
+                img(src="./assets/img/add/7.svg", alt="")
+              .add__text Обучай и анализируй прогресс
     .container
       .btn-center
         a.btn.--blue-shadow.about--btn(href="#")
@@ -473,9 +475,9 @@ block content
           +svgsprite('btn-arrow')
   section.speed
     .container
-      .speed__wrap
+      .speed__wrap.gifs-in
         .speed__pic
-          img.speed__gif.gif-trigger(src="./assets/img/main/speed.png", alt="speed", data-gif="./assets/img/speed/speed.gif", loading="lazy") 
+          img.speed__gif.gif-trigger(src="./assets/img/main/speed.png", alt="speed", data-gif="./assets/img/speed/speed.gif", data-src="./assets/img/main/speed.png" loading="lazy") 
           img.speed__avatar(src="./assets/img/speed/speed__avatar.png", alt="avatar", loading="lazy") 
         .speed__info 
           .title-bluelines.speed__title
