text border on main screen

--- a/src/views/index.pug
+++ b/src/views/index.pug
@@ -15,8 +15,11 @@ block content
       .main__title
         .main__title-txt 
           span.main__title-platform Платформа
+            span.main__title-shadow Платформа
             img.main__title-platform-img(src="./assets/img/platform.svg", alt="Платформа")
-          | <br> для онлайн-обучения
+          br
+          span.main__title-relative для онлайн-обучения
+            span.main__title-shadow для онлайн-обучения
       .main__text Создавай вовлекающие курсы, проводи вебинары и live-уроки, используй современные гибкие методологии разработки и зарабатывай на своей экспертизе. Построй свой бизнес в онлайн-образовании с CoreApp.
       .btn-center 
         .btn-arrow
