--- a/src/views/index.pug
+++ b/src/views/index.pug
@@ -6,10 +6,7 @@ block config
 block content
   section.main
     .main__pic
-      .main__pic-bg
-        img(src="./assets/img/main/2.svg", alt="")
-      .main__pic-animate
-        img(src="./assets/img/main/3.svg", alt="")
+      img(src="./assets/img/main/main-img-group.svg", alt="alt")
     .container
       .main__tag С чёткой методологией
       .main__title
@@ -161,15 +158,15 @@ block content
             .col-sm-4
               .about__pics-block
                 .about__pic-block.about__pic-block-1
-                  img(src="./assets/img/about/2.svg", alt="")
+                  img(src="./assets/img/cards/text.svg", alt="")
                 .about__pic-block.about__pic-block-2
                   img(src="./assets/img/about/3.svg", alt="")
                   .about__pic-animate 
-                    img(src="./assets/img/about/4.svg", alt="")
+                    img(src="./assets/img/cards/img.svg", alt="")
                     .about__mouse
                       img(src="./assets/img/about/mouse.svg", alt="")
                 .about__pic-block.about__pic-block-3
-                  img(src="./assets/img/about/5.svg", alt="")
+                  img(src="./assets/img/cards/question.svg", alt="Вопрос с автопроверкой")
             .col-sm-8
               .about__info 
                 .about__animate   
@@ -250,7 +247,7 @@ block content
               .add__item-label Бесплатно
               .add__number 01
               .add__pic 
-                img(src="./assets/img/add/1.svg", alt="")
+                img(src="./assets/img/add/1.png", srcset="./assets/img/add/1@2x.png 2x", alt="")
               .add__text <b>Зарегистрируйся</b> <br>и познакомься <br>с платформой
             .add__item 
               .add__number 02
@@ -276,7 +273,7 @@ block content
             .add__item 
               .add__number.--green 06
               .add__pic 
-                img(src="./assets/img/add/6.svg", alt="")
+                img(src="./assets/img/add/6.png", srcset="./assets/img/add/6@2x.png 2x" alt="")
               .add__text Добавляй учеников к курсу
             .add__item 
               .add__number.--green 07
