--- a/src/scss/pages/main.scss
+++ b/src/scss/pages/main.scss
@@ -29,12 +29,7 @@ img.img-hidden {
     position: absolute;
     bottom: 56px;
     left: -5px;
-  }
-
-  &__pic-animate{
-    position: absolute;
-    left: 0;
-    bottom: 0;
+    transform: rotate(-10deg);
   }
 
   &:after{
@@ -136,7 +131,7 @@ img.img-hidden {
       top: 45px;
       left: auto;
       right: 20px;
-      transform: rotate(32deg);
+      transform: rotate(17deg);
     }
     &__text {
       padding-right: 290px;
@@ -180,9 +175,9 @@ img.img-hidden {
     }
 
     &__pic {
-      top: 100px;
+      top: 96px;
       max-width: 200px;
-      transform: rotate(20deg);
+      transform: rotate(7deg);
       right: 7%;
     }
 
@@ -210,7 +205,7 @@ img.img-hidden {
       font-size: 14vw;
     }
     &__pic {
-      top: 90px;
+      top: 85px;
     }
   }
 }
@@ -1053,7 +1048,7 @@ img.img-hidden {
   }
 }
 .about__pic-block {
-  margin-bottom: 30px;
+  margin-bottom: 40px;
   position: relative;
 
   @media (max-width: 770px) {
@@ -1063,13 +1058,13 @@ img.img-hidden {
     &-2 {
       position: absolute;
       right: 0;
-      top: 25px;
+      top: 0px;
       transform: rotate(5deg);
       z-index: 2;
     }
     &-3 {
       z-index: 1;
-      margin-top: -40px;
+      margin-top: -37px;
       margin-left: 25%;
     }
   }
@@ -1895,6 +1890,8 @@ img.img-hidden {
   }
 
   @media (max-width: 770px) {
+    padding-bottom: 20px;
+    
     &__wrap {
       display: block;
       padding: 40px 30px;
@@ -1918,6 +1915,8 @@ img.img-hidden {
   }
 
   @media (max-width: 576px) {
+    padding-bottom: 0;
+
     &__wrap {
       margin-left: -30px;
       margin-right: -30px;
@@ -2398,5 +2397,44 @@ img.img-hidden {
   }
   .plnas-page__bottom h4, .plnas-page__bottom .h4 {
     max-width: 280px;
+  }
+}
+
+@media (max-width: 980px) and (min-width: 576px) {
+  .decisions__item.--bg-1 {
+    background-position: right 0px top 30px;
+    background-size: 115px auto;
+
+    .decisions {
+      &__title {
+        max-width: 150px;
+      }
+    }
+  }
+}
+@media (max-width: 420px) {
+  .decisions__item.--bg-1 {
+    background-position: right 0px top 30px;
+    background-size: 125px auto;
+
+    .decisions {
+      &__title {
+        max-width: 150px;
+      }
+    }
+  }
+}
+
+.about__pic-block-1,
+.about__pic-block-3 {
+  img {
+    transform: rotate(-3.5deg);
+  }
+}
+.about__pic-block-2 {
+  .about__pic-animate {
+    img {
+      transform: rotate(3deg) translateY(8px);
+    }
   }
 }
