--- a/src/scss/pages/main.scss
+++ b/src/scss/pages/main.scss
@@ -27,9 +27,10 @@ img.img-hidden {
 
   &__pic{
     position: absolute;
-    bottom: 56px;
-    left: -5px;
+    bottom: 36px;
+    left: -20px;
     transform: rotate(-10deg);
+    width: 290px;
   }
 
   &:after{
@@ -176,9 +177,9 @@ img.img-hidden {
 
     &__pic {
       top: 96px;
-      max-width: 200px;
+      max-width: 240px;
       transform: rotate(7deg);
-      right: 7%;
+      right: 3%;
     }
 
     .btn-center {
@@ -205,7 +206,8 @@ img.img-hidden {
       font-size: 14vw;
     }
     &__pic {
-      top: 85px;
+      width: 220px;
+      top: 75px;
     }
   }
 }
@@ -1052,19 +1054,35 @@ img.img-hidden {
   position: relative;
 
   @media (max-width: 770px) {
-    max-width: 65%;
+    max-width: 55%;
     margin-bottom: 0;
 
     &-2 {
       position: absolute;
       right: 0;
-      top: 0px;
-      transform: rotate(5deg);
+      top: 11px;
+      transform: rotate(0deg);
       z-index: 2;
+
+      & > img {
+        opacity: 0;
+      }
+
+      &:after {
+        content: "";
+        position: absolute;
+        right: -8px;
+        top: -12px;
+        width: 90%;
+        height: 90%;
+        border: 1px dashed rgba(0,0,0,0.5);
+        border-radius: 2px;
+        z-index: -1;
+      }
     }
     &-3 {
       z-index: 1;
-      margin-top: -37px;
+      margin-top: -20px;
       margin-left: 25%;
     }
   }
@@ -1891,7 +1909,7 @@ img.img-hidden {
 
   @media (max-width: 770px) {
     padding-bottom: 20px;
-    
+
     &__wrap {
       display: block;
       padding: 40px 30px;
@@ -1916,13 +1934,14 @@ img.img-hidden {
 
   @media (max-width: 576px) {
     padding-bottom: 0;
+    margin-bottom: -85px;
 
     &__wrap {
       margin-left: -30px;
       margin-right: -30px;
       box-shadow: none;
       border: 0;
-      border-bottom: 10px solid #333A4A;
+      // border-bottom: 10px solid #333A4A;
       border-radius: 0;
     }
   }
